manifests/cluster-prometheus/spinnaker-prometheus/spin-prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "prometheus-spin-prometheus"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - spin-prometheus.stg.showks.cloudnativedays.jp
      secretName: tls-certificate
  rules:
  - host: spin-prometheus.stg.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-spin-prometheus
          servicePort: 9090
